# kanban-rs

./: TODO.md
api/: Cargo.toml
api/migrations/: 20210929190245_create_projects_table.down.sql  20210929190245_create_projects_table.up.sql  20210930212156_create_users_table.up.sql  20211003205330_create_project_members_table.down.sql  20211003205330_create_project_members_table.up.sql  20211003205330_create_project_users_table.down.sql  20211003205330_create_project_users_table.up.sql
api/src/: auth.rs  main.rs  models.rs  projects.rs  tools.rs  users.rs
api/test/: projects.http  users.http
