[package]
edition = "2018"
name = "kanban-api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4.19"
dotenv = "^0.15.0"
log = "^0.4.14"
ormx = {version = "^0.7", features = ["postgres"]}
rocket = {version = "^0.5.0-rc.1", features = ["json"]}
serde = "^1.0.130"
sqlx = {version = "^0.5.7", features = ["runtime-tokio-rustls", "postgres", "time", "macros"]}
tokio = {version = "^1.11.0", features = ["full"]}
